--- a/test.html
+++ b/test.html
@@ -7,10 +7,11 @@
     <style>
         body {
             width: 100%;
-            height: 100vh;
+            height: 60rem;
             margin: 0;
             padding: 0;
             background-color: black;
+            color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -18,12 +19,15 @@
         }
         iframe {
             width: 90%;
-            height: 32rem;
+            height: 32rem;    border-radius: 15px;
+            box-shadow: 0px 0px 0px 1px rgb(95, 95, 95);
         }
     </style>
 </head>
 <body>
     <h1>Test</h1>
     <iframe src="./index.php" frameborder="0"></iframe>
+    <h1>Test</h1>
+    <h1>Test</h1>
 </body>
 </html>
